# tracerail-core

./: Dockerfile  Dockerfile.build  Makefile  README.md  pyproject.toml
.aide/: README.md  architecture.md  development-workflow.md  project-overview.md
docs/: CORE_INTERFACES.md
docs/adr/: 001-multi-tenancy-approach.md  001-use-contract-testing-with-pact.md  002-use-temporal-as-sot-for-live-cases.md  003-use-multi-repo-structure.md  004-adopt-case-centric-ux-model.md  005-use-separate-uis-for-personas.md  006-define-data-sources-for-reporting-needs.md  007-store-process-definitions-as-code.md
process_definitions/: expense_approval_v1.yml
tests/: test_config.py  test_process_engine.py  test_workflow.py
tests/llm/: test_factory.py  test_models.py
tests/tasks/: test_sla_manager.py
tests/temporal/: test_workflows.py
tracerail/: __init__.py  client.py  config.py  exceptions.py  start_workflow.py  tracing.py  worker.py
tracerail/activities/: case_activities.py  process_activities.py
tracerail/domain/: cases.py
tracerail/llm/: __init__.py  base.py  exceptions.py  factory.py
tracerail/llm/providers/: __init__.py  anthropic.py  azure_openai.py  deepseek.py  openai.py
tracerail/routing/: __init__.py  base.py  factory.py
tracerail/routing/engines/: __init__.py  rules_engine.py  static_engine.py
tracerail/service/: case_service.py
tracerail/tasks/: __init__.py  base.py  exceptions.py  factory.py  models.py
tracerail/tasks/managers/: __init__.py  memory.py  sla.py
tracerail/tasks/notification/: __init__.py  logging_service.py
tracerail/tasks/policies/: __init__.py  escalation.py
tracerail/tasks/strategies/: __init__.py  round_robin.py
tracerail/temporal/: __init__.py  activities.py  client.py  exceptions.py  workflows.py
tracerail/workflows/: flexible_case_workflow.py
